# swmt-planner

./: .gitignore  DESIGN.md  HANDOFF.md  LICENSE  NOTES.md  PLAN.md  README.md  data-info.txt  excel-info.txt  excel-info2.txt  info_help.py  interp-test.txt  lam_pulls.json  pyproject.toml  requirements.txt  result.txt
src/swmtplanner/: __init__.py  __init__.pyi
src/swmtplanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/swmtplanner/app/: __init__.py  __init__.pyi
src/swmtplanner/core/: DESIGN.md  __init__.py  __init__.pyi
src/swmtplanner/dashboard/: DESIGN.md  __init__.py  __init__.pyi  config.py  config.pyi  manifest.py  manifest.pyi
src/swmtplanner/debuglog/: DESIGN.md  __init__.py  __init__.pyi  debuglog.py
src/swmtplanner/demand/: DESIGN.md  __init__.py  __init__.pyi  io.py
src/swmtplanner/excel/: __init__.py  __init__.pyi  _audit_report.py  _fab_reports.py  _updates.py  cli.py  excel.py  info.py
tests/: assign_tests.py  coord_tests.py  dashboard_tests.py  date_tests.py  debuglog_tests.py  demand_view_tests.py  excel_tests.py  excel_trees.py  inf_plan_tests.py  machine_tests.py  mysql_support.py  order_tests.py  persistence_tests.py  product_tests.py  rlsitem_tests.py  run_tests.py  test_data.py  test_grouped.py  test_materials.py  test_viewer.py
tests/data-files/: greige-styles.json  holidays.json  machines.json
tests/spec-files/: COORD_TEST_SPEC.md  DASHBOARD_TEST_SPEC.md  DEBUGLOG_TEST_SPEC.md  DEMAND_TEST_SPEC.md  INF_PLAN_TEST_SPEC.md  PERSISTENCE_TEST_SPEC.md  RUN_TEST_SPEC.md  SCHEDULE_TEST_SPEC.md
(+455 files in other folders)
