[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "swmtplanner"
version = "0.0.4"
requires-python = ">=3.12"
dependencies = [
    "pandas[excel]>=2.3.2",
    "typer>=0.17.3"
]
authors = [
    {name = "Lam An Wyner", email = "lwyner@shawmutcorporation.com"},
]
description = "A package containing all the necessary classes and functions to write a Shawmut planning tool"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = ["shawmut", "support", "supply chain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3"
]

[project.scripts]
excel-data = "swmtplanner.excel.cli:app"